<resources>
    <string name="app_name">Signup App</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_login">Login</string>
    <string name="text">Text</string>
    <string name="save_setting">Save</string>
    <string name="new_pass">New Password</string>
</resources>